--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "ejs": "^2.5.6",
     "express": "^4.15.2",
+    "ftp": "^0.3.10",
     "mongodb": "^2.2.25"
   },
   "devDependencies": {
